html/css/style.css
/* css Resetting */

* {
  box-sizing: border-box;
}
body {
  background-color: rgba(35, 33, 33, 0.928);
  margin: 0;
}

h1,
h2,
h3,
h4,
h5,
figure,
p,
ol,
ul {
  margin: 0;
}

img {
  display: block;
  max-width: 100%;
}

/*LOGO*/

.container-header {
  display: flex;
  justify-content: center;
  margin-top: 20px;
}

.container-header-text {
  align-items: center;
  border-bottom: 5px solid rgb(248, 6, 203);
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 70%;
}

.text-header {
  font-family: "Press Start 2P", cursive;
  color: #00ff00;
  font-size: 1.1rem;
  text-align: center;
}

@media (min-width: 768px) {
  .text-header {
    font-size: 2rem;
  }
}

@media (min-width: 1024px) {
  .text-header {
    font-size: 2.5rem;
  }
}

.header-square-left {
  position: relative;
  top: 30px;
  left: 30px;
  transform: rotate(25deg);
  background-color: #ff00ff;
  width: 60px;
  height: 60px;
  z-index: -5;
  animation: blink-squre 0.4s infinite;
}

@media (min-width: 768px) {
  .header-square-left {
    left: 90px;
    width: 120px;
    height: 120px;
  }
}

@media (min-width: 1024px) {
  .header-square-left {
    left: 130px;
    width: 160px;
    height: 160px;
  }
}

.header-square-right {
  position: relative;
  top: 30px;
  right: 30px;
  transform: rotate(-25deg);
  background-color: #ff00ff;
  width: 60px;
  height: 60px;
  z-index: -5;
  animation: blink-squre 0.4s infinite;
}

@media (min-width: 768px) {
  .header-square-right {
    right: 90px;
    width: 120px;
    height: 120px;
  }
}

@media (min-width: 1024px) {
  .header-square-right {
    right: 130px;
    width: 160px;
    height: 160px;
  }
}

/* green pixel rain */

.container-animation-pix {
  display: flex;
  justify-content: center;
  gap: 10px;
}

.pix-box-1 {
  display: block;
  width: 5px;
  height: 5px;
  background-color: rgb(248, 6, 203);
  position: relative;
  animation-name: rain;
  animation-duration: 3s;
  animation-iteration-count: infinite;
}
.pix-box-2 {
  display: block;
  width: 5px;
  height: 5px;
  background-color: rgb(248, 6, 203);
  position: relative;
  animation-name: rain;
  animation-duration: 5s;
  animation-iteration-count: infinite;
}
.pix-box-3 {
  display: block;
  width: 5px;
  height: 5px;
  background-color: rgb(248, 6, 203);
  position: relative;
  animation-name: rain;
  animation-duration: 2s;
  animation-iteration-count: infinite;
}
.pix-box-4 {
  display: block;
  width: 5px;
  height: 5px;
  background-color: rgb(248, 6, 203);
  position: relative;
  animation-name: rain;
  animation-duration: 7s;
  animation-iteration-count: infinite;
}
.pix-box-5 {
  display: block;
  width: 5px;
  height: 5px;
  background-color: rgb(248, 6, 203);
  position: relative;
  animation-name: rain;
  animation-duration: 4s;
  animation-delay: 2s;
  animation-iteration-count: infinite;
}

.pix-box-6 {
  display: block;
  width: 5px;
  height: 5px;
  background-color: rgb(248, 6, 203);
  position: relative;
  animation-name: rain;
  animation-duration: 4s;
  animation-delay: 1s;
  animation-iteration-count: infinite;
}
.pix-box-7 {
  display: block;
  width: 5px;
  height: 5px;
  background-color: rgb(248, 6, 203);
  position: relative;
  animation-name: rain;
  animation-duration: 4s;
  animation-delay: 5s;
  animation-iteration-count: infinite;
}
.pix-box-8 {
  display: block;
  width: 5px;
  height: 5px;
  background-color: rgb(248, 6, 203);
  position: relative;
  animation-name: rain;
  animation-duration: 6s;
  animation-delay: 8s;
  animation-iteration-count: infinite;
}
.pix-box-9 {
  display: block;
  width: 5px;
  height: 5px;
  background-color: rgb(248, 6, 203);
  position: relative;
  animation-name: rain;
  animation-duration: 1s;
  animation-delay: 12s;
  animation-iteration-count: infinite;
}
.pix-box-10 {
  display: block;
  width: 5px;
  height: 5px;
  background-color: rgb(248, 6, 203);
  position: relative;
  animation-name: rain;
  animation-duration: 8s;
  animation-delay: 5s;
  animation-iteration-count: infinite;
}
.pix-box-11 {
  display: block;
  width: 5px;
  height: 5px;
  background-color: rgb(248, 6, 203);
  position: relative;
  animation-name: rain;
  animation-duration: 12s;
  animation-delay: 6s;
  animation-iteration-count: infinite;
}

.continer-line {
  margin-top: 105px;
  display: flex;
  justify-content: center;
}

@media (min-width: 768px) {
  .continer-line {
    margin-top: 70px;
  }
}

.line {
  position: absolute;
  height: 10px;
  width: 90%;
  background-color: #00ff00;
}

.cone-shape {
  position: absolute;
  margin-right: 310px;
  border-top: 30px solid #00ff00;
  border-left: 10px solid transparent;
  border-right: 10px solid transparent;
  height: 0;
  width: 40px;
}

@media (min-width: 768px) {
  .cone-shape {
    margin-right: 600px;
  }
}

.dripp {
  position: relative;
  display: block;
  top: 10px;
  left: -155px;
  background-color: #00ff00;
  height: 7px;
  width: 7px;
  animation: dripp-dropp 0.7s infinite ease-in-out;
}

@media (min-width: 768px) {
  .dripp {
    left: -300px;
  }
}

/* logo text and link */
.container-logo {
  margin-top: 135px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.logo-img {
  width: 300px;
}

.container-link {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  border: solid 1px rgba(0, 0, 0, 0.887);
  position: relative;
  top: 270px;
  margin: auto;
  background-color: rgba(248, 6, 204, 0.705);
  animation: circle 25s infinite linear;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 5;
}

@media (min-width: 768px) {
  .container-link {
    width: 90px;
    height: 90px;
  }
}

.blink {
  animation: blink 1s infinite;
}

.link-text {
  font-family: "Press Start 2P", cursive;
  font-size: 0.5rem;
  padding: 2rem;
  text-decoration: none;
  color: #00ff00;
}

@media (min-width: 768px) {
  .link-text {
    font-size: 0.8rem;
  }
}

/* escape link */

.wrap-escape {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 150px;
}
.linkEscape {
  font-family: Helvetica, sans-serif;
  font-size: 0.8rem;
  border: solid 1px rgb(163, 15, 15);
  width: 50px;
  height: 50px;
  padding-top: 15px;
  text-align: center;
  border-radius: 50%;
  background-color: rgb(255, 0, 0);
  box-shadow: 2px 4px;
  text-decoration: none;
  color: black;
  margin: 10px;
}

@media (min-width: 768px) {
  .linkEscape {
    width: 80px;
    height: 80px;
    padding-top: 25px;
    font-size: 1.2rem;
  }
}

.escape {
  margin-bottom: 2rem;
  font-family: "Reenie Beanie", cursive;
  color: #ff00ff;
  font-size: 2rem;
  margin: 5%;
  text-align: center;
  animation-name: escape;
  animation-duration: 0.5s;
  animation-iteration-count: infinite;
}

@media (min-width: 768px) {
  .escape {
    font-size: 3rem;
  }
}

/*footer*/

.container-footer {
  display: flex;
  flex-wrap: wrap;
  width: 90%;
  margin-top: 30px;
  margin-bottom: 20px;
  margin-left: 5%;
  margin-right: 5%;
}

@media (min-width: 768px) {
  .container-footer {
    margin-top: 70px;
  }
}

.container-footer p {
  width: 100%;
  border: solid 4px #00ff00;
  padding: 20px;
  text-align: center;
  font-size: 1rem;
  font-family: Helvetica, sans-serif;
  color: #00ff00;
}

@media (min-width: 1024px) {
  .container-footer p {
    font-size: 1.2rem;
  }
}

/* Animation */

@keyframes circle {
  0% {
    transform: rotate(0deg) translateY(128px) rotate(0deg);
  }

  100% {
    transform: rotate(360deg) translateY(128px) rotate(-360deg);
  }
}

@media (min-width: 768px) {
  @keyframes circle {
    0% {
      transform: rotate(0deg) translateY(230px) rotate(0deg);
    }

    100% {
      transform: rotate(360deg) translateY(230px) rotate(-360deg);
    }
  }
}

@media (min-width: 1024px) {
  @keyframes circle {
    0% {
      transform: rotate(0deg) translateY(300px) rotate(0deg);
    }

    100% {
      transform: rotate(360deg) translateY(300px) rotate(-360deg);
    }
  }
}

@keyframes rain {
  from {
    top: 0px;
  }
  to {
    top: 465px;
    background-color: #00ff00;
  }
}

@keyframes escape {
  0% {
    color: #ff00ff;
  }
  100% {
    color: rgba(35, 33, 33, 0.928);
  }
}

@keyframes blink {
  0% {
    color: black;
  }

  50% {
    color: rgba(248, 6, 204, 0.705);
  }

  100% {
    color: black;
  }
}

@keyframes dripp-dropp {
  0% {
    top: 0%;
    width: 7px;
    height: 7px;
  }
  20% {
    top: 60px;
    width: 7px;
    height: 7px;
  }
  40% {
    top: 120px;
    width: 7px;
    height: 7px;
  }
  60% {
    top: 180px;
    width: 7px;
    height: 7px;
  }
  70% {
    top: 240px;
    width: 7px;
    height: 7px;
  }

  80% {
    top: 350px;
    height: 7px;
    width: 10px;
  }

  90% {
    top: 350px;
    height: 7x;
    width: 30px;
  }

  100% {
    top: 350px;
    height: 7px;
    width: 40px;
  }
}

@media (min-width: 768px) {
  @keyframes dripp-dropp {
    0% {
      top: 0px;
      width: 7px;
      height: 7px;
    }
    20% {
      top: 80px;
      width: 7px;
      height: 7px;
    }
    40% {
      top: 180px;
      width: 7px;
      height: 7px;
    }
    60% {
      top: 260px;
      width: 7px;
      height: 7px;
    }
    70% {
      top: 360px;
      width: 7px;
      height: 7px;
    }

    80% {
      top: 495px;
      height: 7px;
      width: 10px;
    }

    90% {
      top: 495px;
      height: 7x;
      width: 30px;
    }

    100% {
      top: 495px;
      height: 7px;
      width: 40px;
    }
  }
}

@media (min-width: 1024px) {
  @keyframes dripp-dropp {
    80% {
      top: 473px;
      height: 7px;
      width: 10px;
    }

    90% {
      top: 473px;
      height: 7px;
      width: 30px;
    }

    100% {
      top: 473px;
      height: 7px;
      width: 40px;
    }
  }
}

@keyframes blink-squre {
  0% {
    background-color: #ff00ff;
  }
  49% {
    background-color: #ff00ff;
  }
  50% {
    background-color: #00ff00;
  }
  100% {
    background-color: #00ff00;
  }
}

